# LibraryManagementSystem

./: CMakeLists.txt  README.md
data/: lib.json
headers/: Book.hpp  CommandLineInterface.hpp  Library.hpp  SystemController.hpp
src/: Book.cpp  CommandLineInterface.cpp  Library.cpp  SystemController.cpp  main.cpp
